Fix horizontal scrolling bug

--- a/website/src/Components/NavigationBar/NavigationBar.css
+++ b/website/src/Components/NavigationBar/NavigationBar.css
@@ -4,8 +4,8 @@
   background-color: #ffffff;
   font-family: "Montserrat-Regular", sans-serif;
   border-right: 1px solid #c4c8ca;
-  height: 100vh;
-  width: 200px;
+  height: calc(100vh - 70px);
+  width: 160px;
 }
 
 .NavBar li {
